# perfetto

./: Cargo.toml  README.md  build.rs
cmake/: CMakeLists.txt  wrapper.cpp
examples/: main.rs
src/: lib.rs
