[package]
name = "perfetto"
version = "0.1.0"
authors = ["Nathan Huckleberry <nhuck@pmull.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0"
cmake = "0.1.50"
bindgen = "0.59"

